// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<h1>
  My Counter
</h1>
`;

exports[`should match snapshot 2`] = `
<div>
  <h1>
    My Counter
  </h1>
  0
  <button
    onClick={[Function]}
  >
    Increment
  </button>
  <button
    onClick={[Function]}
  >
    Decrement
  </button>
</div>
`;
